Fix name placement on mobile and horizontal overflow issues

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
   margin: 1.75rem;
+  background-color: white;
+  overflow-x: hidden;
 }
 
 .background {
@@ -9,6 +11,7 @@ body {
   bottom: 15rem;
   background-color: #4379a6;
   transform: rotate(-3deg) translateY(-13rem);
+  overflow: hidden;
   z-index: -1;
 }
 
@@ -190,11 +193,6 @@ header {
   .headshot {
     width: 200px;
     margin-top: 2rem;
-  }
-
-  .name {
-    position: absolute;
-    top: 12rem;
   }
 
   .box {
